--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node app",
-    "server": "nodemon app"
+    "server": "nodemon app",
+    "client": "npm start --prefix ../frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "socket.io": "^3.1.1"
   },
